other/kfp-http-proxy.in.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: kfp-httpproxy
  namespace: kubeflow-pipelines
spec:
  routes:
  - conditions:
    - prefix: /
    services:
    - name: ml-pipeline-ui
      port: 80
  virtualhost:
    fqdn: kubeflow-pipelines.${DATA_E2E_BASE_URL}
