other/kfp-http-proxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: kfp-httpproxy
  namespace: kubeflow
spec:
  routes:
  - conditions:
    - prefix: /
    services:
    - name: ml-pipeline-ui
      port: 80
  virtualhost:
    fqdn: kubeflow-pipelines.tanzudatatap.ml
